--- a/client/angular.json
+++ b/client/angular.json
@@ -34,10 +34,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.scss"
+              "src/app/styles/styles.scss",
+              "src/app/styles/theme.scss"
             ],
             "scripts": []
           },
@@ -106,8 +105,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/app/styles/styles.scss",
+              "src/app/styles/theme.scss"
             ],
             "scripts": []
           }
